--- a/asherrepublic/src/App.css
+++ b/asherrepublic/src/App.css
@@ -25,12 +25,13 @@ html {
   font-family: 'Open Sans', sans-serif;
   font-size: 2.5vw;
   font-family: 'Poppins', sans-serif;
-
-}
-
-.Green {
   color: #529D61
+
 }
+
+/* .Green {
+  color: #529D61
+} */
 
 @media (max-width: 600px) {
   .App {
@@ -43,8 +44,9 @@ html {
   }
 
   .imageText {
-    font-size: 4vw;
-
+    font-size: 4.5vw;
+    padding-top:300px;
+    color:black;
   }
 
 }
